# coursera-helper

./: .travis.yml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  coursera-helper  coursera-helper.bat  fabfile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pythonapp.yml
coursera/: api.py  utils.py
coursera_helper/: __init__.py  api.py  cauth.py  commandline.py  cookies.py  coursera_dl.py  credentials.py  define.py  downloaders.py  utils.py  workflow.py
test/: test_api.py  test_commandline.py  test_cookies.py  test_credentials.py  test_downloaders.py  test_filter.py  test_parsing.py  test_utils.py  test_workflow.py  utils.py
test/fixtures/auth/: netrc
