[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coursera-helper"
dynamic = ["version"]
description = "Script for downloading Coursera.org videos and naming them."
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    { name = "Ye Zheng", email = "csyezheng@gmail.com" },
]
keywords = [
    "MOOCs",
    "coursera",
    "coursera-dl",
    "download",
    "education",
    "video",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Education",
]
dependencies = [
    "beautifulsoup4>=4.1.3",
    "requests>=2.10.0",
    "six>=1.5.0",
    "urllib3>=1.23",
    "pyasn1>=0.1.7",
    "keyring>=4.0",
    "configargparse>=0.12.0",
    "attrs==18.1.0",
    "playwright>=1.38.0",
    "browser_cookie3>=0.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mock>=1.0.1",
    "coverage>=3.7",
    "keyrings.alt",
    "tox",
]

[project.scripts]
coursera-helper= "coursera_helper.coursera_dl:main"

[project.urls]
Homepage = "https://github.com/csyezheng/coursera-helper"

[tool.hatch.version]
path = "coursera_helper/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/coursera_helper",
    "/test"
]

[tool.hatch.build.targets.wheel]
packages = ["/coursera_helper"]
